--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -76,7 +76,7 @@ h1.temp {
   position: relative;
 }
 
-.weather.loading:after {
+.weather.loading::after {
   visibility: visible;
   content: "Loading...";
   color: white;
