--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,13 +1,55 @@
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap');
+
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  height: calc(100vh - 40px);
   font-family: 'Open Sans', sans-serif;
   background: #222;
   background-image: url('https://source.unsplash.com/1600x900/?weather');
   font-size: 120%;
+}
+
+.menu {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  background: #000000d0;
+  color: white;
+  font-size: 80%;
+  padding: 0.6em 2em;
+  box-sizing: border-box; 
+  width: 100%;
+  height: 40px;
+}
+
+.menu-celsius {
+  margin-right: 0.1em;
+}
+
+.menu-celsius,
+.menu-fahrenhiet {
+  padding: 0.3em;
+  font-weight: 700;
+}
+
+.menu-celsius:hover,
+.menu-fahrenhiet:hover,
+.menu-celsius:active,
+.menu-fahrenhiet:active {
+  border: 1px solid #fff;
+  cursor: pointer;
+  }
+
+.content {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .card {
@@ -83,4 +125,8 @@ h1.temp {
   position: absolute;
   top: 0;
   left: 20px;
+}
+
+.button-border {
+  border: 1px solid #fff;
 }
